*******************************************************************************
4.5 release
*******************************************************************************

2007-06-06    <dancy@CANDY2K>
4.5b17
	
	* BUGFIX: attr.cl: nfs-attr-blocks and nfs-attr-used sometimes weren't being updated (minor impact, however).

	* dir.cl: nfs-lookup-dir now takes an argument to control whether
	or not the directory should be read during a cache miss.  This
	should save some unnecessary work during certain operations.

	* BUGFIX (spr33156): fhandle.cl: Rename operations
	(rename-fhandle) weren't probably updating the fh-pathname slot.
	Unfortunately the linux NFS client was masking this bug.  Added a
	test function.  Tweaked the hard link stuff a bit as well.  This
	stuff needs to be totally revamped.

2007-05-24    <dancy@CANDY2K>
4.5b16
	* INTEROPERABILITY: spr33048.  attr.cl: Report directory sizes as
	512 bytes instead of the 0 bytes that 'stat' returns.  This makes
	AIX clients happier.  

2007-05-09    <dancy@CANDY2K>
4.5b15  

	* configure.cl (read-nfs-cfg): Don't call setup-logging from
	within this function.  Logging is independent of the nfs
	configuration.
	
	* configure/configure.exe.manifest: New.  Manifest file to make
	sure that the configure program runs w/ admin privs on Vista.

	* ENHANCEMENT:  Windows Vista Support
	configure/Makefile: Use mt.exe (from platform SDK) to embed the
	configure.exe.manifest file into the configure.exe file.
	
4.5b14
	* loadem.cl: Removed :nfs-telnet-server from *features*.

2007-05-04    <dancy@DANCYSOFT>
4.5b13
        ENHANCEMENT: Finalized console separation.
	
	* nfs.nsi: 
	  * Use a global mutex so that installer is exclusive across all 
	    sessions.  
	  * Install shortcuts into All Users area, not current user.
	  * Finalized NFS console startup program group entry.

	* nfs-log.cl (added.  missed it last time around): Close the
	console if the service terminates.
	
2007-05-03    <dancy@DANCYSOFT>