@@ -2,6 +2,10 @@
 4.5 release
 *******************************************************************************
 
+2007-06-14    <layer@HOBART>
+
+	* Makefile: fix update cobweb rules
+
 2007-06-06    <dancy@CANDY2K>
 4.5b17
 	
